Make the `write` options a bit prettier

--- a/write.html
+++ b/write.html
@@ -57,10 +57,15 @@
 		.field label {
 			display: inline-block;
 			width: 3em;
+			color: white;
 		}
 
 		.field input {
 			width: 20em;
+			padding: 1ex 0.5ex;
+			margin-bottom: 1ex;
+			border: none;
+			font-family: "Liberation Mono", monospace;
 		}
 		</style>
 	</head>
