--- a/write.html
+++ b/write.html
@@ -93,6 +93,8 @@
 					<label>tags</label>
 					<input id="tags" type="text" />
 				</div>
+
+				<input id="content" type="hidden" />
 			</form>
 		</div>
 
@@ -132,6 +134,7 @@
 			}
 
 			var titleEl = document.querySelector("#title");
+			var contentEl = document.querySelector("#content");
 
 			function updateTitle() {
 				var firstLine = codeMirror.getLine(0);
@@ -142,6 +145,15 @@
 
 				document.title = `${title} - notes`;
 				titleEl.value = title;
+			}
+
+			function updateDocument() {
+				var firstLine = codeMirror.getLine(0);
+				var start = {line: 0};
+				if (firstLine.startsWith("# ")) {
+					start = {line: 1};
+				}
+				contentEl.value = codeMirror.getRange(start, {line: codeMirror.lastLine()});
 			}
 
 			var wordsPerMinute = 250;
@@ -174,12 +186,14 @@
 
 			displayStats();
 			updateTitle();
+			updateDocument();
 			codeMirror.on('change', function(cm, change) {
 				displayStats();
 
 				if (change.from.line == 0) {
 					updateTitle();
 				}
+				updateDocument();
 
 				needsSave = true;
 			});
