Fix syntax error in savedName

--- a/write.html
+++ b/write.html
@@ -124,7 +124,7 @@
 				autofocus: true,
 			});
 
-			function savedName {
+			function savedName() {
 				return `notes|${location.href}`;
 			}
 
