Make editing multiple documents easier
This changes the url based on the title, which in turn saves the
document to different locations.  An alternative would be using a
timestamp...

--- a/write.html
+++ b/write.html
@@ -163,6 +163,10 @@
 
 				document.title = `${title} - notes`;
 				titleEl.value = title;
+
+				var loc = new URL(location.href);
+				loc.search = `?title=${title}`;
+				history.replaceState({}, document.title, loc.toString());
 			}
 
 			function updateDocument() {
